[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/BaseMenuPanel.tscn" type="PackedScene" id=1]
[ext_resource path="res://art/Match 3 Assets 3/Match 3 Assets/UI/Buttons/Sound On Button.png" type="Texture" id=2]
[ext_resource path="res://art/Match 3 Assets 3/Match 3 Assets/UI/Buttons/Back Button.png" type="Texture" id=3]
[ext_resource path="res://art/Match 3 Assets 3/Match 3 Assets/UI/godot match 3 settings bar.png" type="Texture" id=4]
[ext_resource path="res://scripts/settings.gd" type="Script" id=5]
[ext_resource path="res://art/Match 3 Assets 3/Match 3 Assets/UI/Buttons/Sound Off Button.png" type="Texture" id=6]

[node name="settings" instance=ExtResource( 1 )]
script = ExtResource( 5 )
sound_on = ExtResource( 2 )
sound_off = ExtResource( 6 )

[node name="graph" parent="MarginContainer/graph and buttons" index="0"]
margin_bottom = 488.0
rect_min_size = Vector2( 488, 488 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="buttons" parent="MarginContainer/graph and buttons" index="1"]
margin_top = 518.0
margin_bottom = 922.0

[node name="button1" parent="MarginContainer/graph and buttons/buttons" index="0"]
margin_bottom = 256.0
rect_min_size = Vector2( 512, 256 )
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 5

[node name="button2" parent="MarginContainer/graph and buttons/buttons" index="1"]
margin_top = 276.0
margin_bottom = 404.0
rect_min_size = Vector2( 512, 128 )
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 5
[connection signal="pressed" from="MarginContainer/graph and buttons/buttons/button1" to="." method="_on_button1_pressed"]
[connection signal="pressed" from="MarginContainer/graph and buttons/buttons/button2" to="." method="_on_button2_pressed"]
